== 0.2.3 2010-10-12

 * #inspect no longer requires a database connection.
 * ActiveRecord::Base.default_timezone support.
 * Dirty attribute tracking works.
 * Undeclared attributes are preserved when roundtripped through ActiveNomad.

== 0.2.2 2010-10-07

 * Support custom destruction strategies.
 * #save noops if no persistence strategy defined.

== 0.2.1 2010-10-06

 * from_json noops on invalid JSON strings.

== 0.2.0 2010-10-05

 * No longer overriding ActiveRecord::Base#to_json.

== 0.1.0 2010-10-05

 * Provide multiple serialization formats (query string, json).
 * Add #{to,from}_serialized_attributes to easily define more.

== 0.0.4 2010-10-01

 * Attributes are inheritable.

== 0.0.3 2010-09-29

 * Don't open unnecessary database transactions on save.

== 0.0.2 2010-09-28

 * Rename to Active Nomad.

== 0.0.1 2010-09-28

 * Hi.