@@ -1,3 +1,7 @@
+== LATEST
+
+ * Handle Rollback exceptions in Base class.
+
 == 0.2.3 2010-10-12
 
  * #inspect no longer requires a database connection.
